--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,120 @@
 * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 nav {
-    width: 100vw;
-    height: 100px;
-    background-color: #eae8e182;
-    box-shadow: 5px 2px 8px #0cd2ffab;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 100vw;
+  height: 80px;
+  background-color: #eae8e182;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav h1 {
-    margin: 0 20px;
-    font-family: 'Lobster', cursive;
-    font-size: 140%;
-    color: #229ee6;
+  margin-left: 15%;
+  font-size: 140%;
+  color: #229ee6;
 }
 
 #nav-links {
-    margin-left: 20px;
+  list-style-type: none;
+  margin-right: 5%;
 }
 
 #nav-links li {
-    display: inline;
-    font-family: 'Vampiro One', cursive;
-    font-size: 20px;
-    margin: 0 40px 0 0;
+  display: inline;
+  margin: 0 5px;
 }
 
-#nav-links li:first-child {
-
-    color: #229ee6;
+#nav-links a {
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: black;
 }
 
 main {
-    width: 100vw;
-    height: 653px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 673px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-    width: 30vw;
-    min-width:200px;
-    height: 120px;
-    background-color: #000000;
-    border-radius: 3px;
-    color: #229ee6;
+  width: 26vw;
+  min-width: 360px;
+  height: 75px;
+  font-size:10px;
+  background-color: #131415;
+  border-radius: 8px;
+  display: flex;
+  justify-content:center;
+  align-items: center;
 }
 
 .container h3 {
-    margin-top: 15px;
-    text-align: center;
-    font-size:128%;
+  font: 2.5em Segoe UI Semibold;
+  color: white;
+  margin-left:5%;
+}
+
+#color-name {
+  font: bold 2.5em Rockwell;
+  letter-spacing: 2px;
+  margin: 1% 0 0 2%;
+  text-transform: uppercase;
+  color: #559fca;
 }
 
 #change-background {
-    display: block;
-    margin: 10px auto;
-    width:90px;
-    height:28px;
-    border:none;
-    border-radius:5px;
-    background-color: #229ee6;
-    font-weight:bold;
+  display: block;
+  margin: 20px auto;
+  padding: 5px 10px;
+  width: 134px;
+  height: 41px;
+  border: 3px solid black;
+  outline: none;
+  box-shadow: 2px 1px 5px black;
+  border-radius: 5px;
+  font-family: courier new;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: transparent;
+  transition-property: background-color color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+}
+
+#change-background:hover {
+  background-color: black;
+  color: white;
+}
+
+@media (max-width:764px) {
+
+  nav {
+    justify-content:flex-start;
+  }
+
+  nav h1 {
+    margin-left:3%;
+  }
+
+  #nav-links {
+    display:none;
+  }
+
+  .container h3,#color-name {
+    font-size:2em;
+  }
+
+  .container {
+    min-width:300px;
+  }
+
 }
