--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ main {
 #color-name {
   font: bold 2.5em Rockwell;
   letter-spacing: 2px;
-  margin: 1% 0 0 2%;
+  margin: 1% 3% 0 2%;
   text-transform: uppercase;
   color: #559fca;
 }
