--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 nav {
   width: 100vw;
-  height: 80px;
+  height: 10vh;
   background-color: #eae8e182;
   display: flex;
   justify-content: space-between;
@@ -38,7 +38,7 @@ nav h1 {
 
 main {
   width: 100vw;
-  height: 673px;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
